# TalentGraph

./: .dockerignore  .gitignore  README.md  flatten_candidates.py  honeypot_detector.py  jd_rubric.py  pyproject.toml  rank.py  submission.csv  validate_submission.py  vercel.json
api/: database.py  main.py  orchestrator.py
common/: __init__.py  llm.py  settings.py
config/: .env.example
data/: final_rankings.json  talentgraph.sqlite3
deployment/: api.Dockerfile  docker-compose.yml  frontend.Dockerfile
docs/: architecture.md  data_dictionary.md  roadmap.md
embeddings/: __init__.py  indexer.py  models.py  pipeline.py  service.py  text.py
evaluation/: __init__.py  harness.py  metrics.py  models.py
explainability/: __init__.py  classifier.py  generator.py  models.py
feature_engineering/: __init__.py  behavioral.py
frontend/: app.py  package-lock.json  package.json
frontend/app/: globals.css  (+2 more)
ingestion/: loader.py
knowledge_graph/: __init__.py  graph.py  ontology.py  pipeline.py  trajectory.py
parsers/: __init__.py  experience.py  jobs.py  models.py  pipeline.py  resumes.py  sections.py
preprocessing/: __init__.py  cleaning.py  loading.py  models.py  pipeline.py  validation.py
ranking_engine/: __init__.py  features.py  models.py  rubric.py  scoring.py
reranking/: __init__.py  models.py  reranker.py
retrieval/: __init__.py  bm25.py  dense.py  filter.py  hybrid.py  models.py
scripts/: export_rankings.py  healthcheck.sh  process_phase10.py  process_phase11.py  process_phase2.py  process_phase3.py  process_phase4.py  process_phase5.py  process_phase6.py  process_phase7.py  process_phase8.py  process_phase9.py  seed_sample_data.py
tests/: test_health.py  test_jd_rubric.py  test_llm_provider.py  test_phase10_explainability.py  test_phase11_evaluation.py  test_phase12_api.py  test_phase2_challenge_flow.py  test_phase2_cleaning.py  test_phase2_validation_pipeline.py  test_phase3_parsers.py  test_phase3_pipeline.py  test_phase4_graph.py  test_phase5_embeddings.py  test_phase6_retrieval.py  test_phase7_behavioral.py  test_phase8_scoring.py  test_phase9_reranking.py  test_settings.py
(+3 files in other folders)
