[project]
name = "talentgraph"
version = "0.1.0"
description = "Candidate-ranking AI foundation scaffold."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "dateparser>=1.2.0",
    "fastapi>=0.115.0",
    "networkx>=3.4.0",
    "numpy>=2.3.0",
    "ollama>=0.4.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.12.0",
    "rapidfuzz>=3.10.0",
    "rank-bm25>=0.2.2",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "httpx>=0.27.2",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
tmp_path_retention_policy = "failed"

[tool.setuptools.packages.find]
include = ["api*", "common*", "embeddings*", "knowledge_graph*", "parsers*", "preprocessing*"]
exclude = ["tests*", "tmp*"]
